fix side spacing in setting and other pages

--- a/openmetadata-ui/src/main/resources/ui/src/components/Applications/AppDetails/app-details.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Applications/AppDetails/app-details.less
@@ -35,9 +35,9 @@
 }
 
 .app-details-page-layout {
-  .page-layout-v1-center {
-    padding: 0;
-  }
+  //   .page-layout-v1-center {
+  //     padding: 0;
+  //   }
   // ****  Lazy Logs ****
 
   .lazy-log-container {
