--- a/openmetadata-ui/src/main/resources/ui/src/components/Team/TeamDetails/teams.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Team/TeamDetails/teams.less
@@ -14,7 +14,7 @@
 @import url('../../../styles/variables.less');
 
 .team-list-container {
-  padding: 20px;
+  padding: 20px 0;
   .ant-btn {
     border-radius: 4px;
   }
@@ -78,7 +78,7 @@
 }
 
 .teams-layout {
-  margin: -16px -16px 0 -16px;
+  margin: -12px 0;
 
   .ant-card-head-title {
     padding-top: 0;
@@ -94,6 +94,10 @@
 
     .ant-card {
       background: none;
+    }
+
+    .ant-collapse-header {
+      padding-left: 0;
     }
 
     .ant-collapse-arrow {
